--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "HungryHippo",
-  "version": "0.2.0",
+  "name": "starter_template",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
